# Seapot

./: Cargo.toml  README.md
src/: main.rs
src/seapot/: mod.rs  palette.rs  windows.rs
